syntax = "proto3";

package maple2;

message FieldRequest {
  message CreateDungeon {
    int32 dungeon_id = 1;
    int32 size = 2;
    int32 party_id = 3;
  }
  message DestroyDungeon {
    int32 room_id = 1;
  }
  int64 requester_id = 1;
  oneof field {
    CreateDungeon create_dungeon = 2;
    DestroyDungeon destroy_dungeon = 3;
  }
}

message FieldResponse {
  int32 error = 1;
  int32 room_id = 2;
}

message ChatRequest {
  message Whisper {
    int64 recipient_id = 1;
    string recipient_name = 2;
  }
  message Party {
    int32 party_id = 1;
    repeated int64 member_ids = 2;
  }
  message Guild {
    int64 guild_id = 1;
    repeated int64 member_ids = 2;
  }
  message World {
  }
  message Super {
    int32 item_id = 1;
  }
  message Club {
    int64 club_id = 1;
    repeated int64 member_ids = 2;
  }
  message Wedding {
    int32 item_id = 1;
  }
  message SystemNotice {}

  int64 account_id = 1;
  int64 character_id = 2;
  string name = 3;
  string message = 4;
  repeated int64 item_uids = 5;

  oneof chat {
    Whisper whisper = 6;
    Party party = 7;
    Guild guild = 8;
    World world = 11;
    SystemNotice system_notice = 15;
    Super super = 16;
    Club club = 20;
    Wedding wedding = 25;
  }
}

message ChatResponse {
}

message GameResetRequest {
  message Daily {}
  message Weekly {}

  oneof reset {
    Daily daily = 1;
    Weekly weekly = 2;
  }
}

message GameResetResponse {
  int32 error = 1;
}

message BuddyRequest {
  message Invite {
    int64 sender_id = 1;
  }
  message Accept {
    int64 entry_id = 1;
  }
  message Decline {
    int64 entry_id = 1;
  }
  message Block {
    int64 sender_id = 1;
  }
  message Delete {
    int64 entry_id = 1;
  }
  message Cancel {
    int64 entry_id = 1;
  }

  int64 receiver_id = 1;

  oneof buddy {
    Invite invite = 2;
    Accept accept = 3;
    Decline decline = 4;
    Block block = 5;
    Delete delete = 7;
    Cancel cancel = 17;
  }
}

message BuddyResponse {
  int32 channel = 1;
}

message GroupChatInfo {
  message Member {
    int64 character_id = 1;
  }

  int32 id = 1;
  repeated Member members = 2;
}

message GroupChatRequest {
  message Create {}

  message Invite {
    int64 receiver_id = 1;
    string receiver_name = 2;
  }

  message Leave {}

  message RemoveMember {
    int64 character_id = 1;
  }

  message AddMember {
    int64 requester_id = 1;
    string requester_name = 2;
    int64 character_id = 3;
  }

  message Chat {
    string message = 1;
    string requester_name = 2;
  }

  message Disband {}

  int32 group_chat_id = 1;
  int64 requester_id = 2;
  repeated int64 receiver_ids = 3;
  oneof group_chat {
    Create create = 4;
    Invite invite = 5;
    Leave leave = 6;
    RemoveMember remove_member = 7;
    AddMember add_member = 8;
    Chat chat = 9;
    Disband disband = 10;
  }
}

message GroupChatResponse {
  oneof Info {
    int32 group_chat_id = 1;
    GroupChatInfo group_chat = 2;
  }

  int32 error = 3;
}

message PartySearchInfo {
  int64 id = 1;
  int32 party_id = 2;
  string name = 3;
  int32 size = 4;
  int64 creation_time = 5;
  bool no_approval = 6;
  int32 member_count = 7;
  int64 leader_account_id = 8;
  int64 leader_character_id = 9;
  string leader_name = 10;
}

message PartySearchInfoRequest {
  int32 id = 1;
  int32 party_id = 2;
}

message PartySearchInfoResponse {
  optional PartySearchInfo party_search = 1;
}

message PartySearchRequest {
  message Create {
    string name = 1;
    int32 size = 2;
    bool no_approval = 3;
    int64 requestor_id = 4;
  }
  message Set {
    PartySearchInfo party_search = 1;
    int64 requestor_id = 2;
  }
  message Fetch {
    int32 sort_by = 1;
    string search_string = 2;
    int32 page = 3;
  }
  message Remove {}

  int64 id = 1;
  int32 party_id = 2;
  repeated int64 receiver_ids = 3;
  oneof party_search {
    Create create = 4;
    Set set = 5;
    Fetch fetch = 6;
    Remove remove = 7;
  }
}

message PartySearchResponse {
  oneof Info {
    int32 party_id = 1;
  }
  repeated PartySearchInfo party_searches = 2;

  int32 error = 3;
  int32 error_category = 4;
}

message ClubInfo {
  message Member {
    int64 character_id = 1;
    string character_name = 2;
    int64 login_time = 3;
    int64 join_time = 4;
  }

  int64 id = 1;
  string name = 2;
  int64 leader_id = 3;
  string leader_name = 4;
  int64 creation_time = 5;
  repeated Member members = 6;
  int32 state = 7;
}

message ClubInfoRequest {
  int64 character_id = 1;
}

message ClubInfoResponse {
  repeated ClubInfo clubs = 1;
}

message MarriageRequest {
  message RemoveMarriage {}
  message RemoveWeddingHall {}

  int64 id = 1;
  int64 receiver_id = 2;
  oneof marriage {
    RemoveMarriage remove_marriage = 3;
    RemoveWeddingHall remove_wedding_hall = 4;
  }
}

message MarriageResponse {
  int32 error = 1;
}

message PlayerWarpRequest {
  message GoToPlayer {
    int64 character_id = 1;
    int32 channel = 2;
  }

  int64 requester_id = 3;
  oneof request {
    GoToPlayer go_to_player = 4;
  }
}

message PlayerWarpResponse {
  int32 error = 1;
  float x = 2;
  float y = 3;
  float z = 4;
  int32 room_id = 5;
}

message AdminRequest {
  message Alert {
    string message = 1;
    int32 duration = 2;
    int32 flags = 3;
  }

  message AddStringBoard {
    string message = 1;
    int32 id = 2;
  }

  message RemoveStringBoard {
    int32 id = 1;
  }

  message ListStringBoard {}

  int64 requester_id = 1;
  oneof request {
    Alert alert = 2;
    AddStringBoard add_string_board = 3;
    RemoveStringBoard remove_string_board = 4;
    ListStringBoard list_string_board = 5;
  }
}

message AdminResponse {
  int32 error = 1;
  string message = 2;
}

message DisconnectRequest {
  int64 character_id = 1;
  bool all = 2;
  bool force = 3;
}

message DisconnectResponse {
  bool success = 1;
}

message HeartbeatRequest {
  int64 character_id = 1;
}

message HeartbeatResponse {
  bool success = 1;
}

message MentorRequest {
  message Invite {
    int64 receiver_id = 1;
  }

  int64 requester_id = 1;
  oneof request {
    Invite invite = 2;
  }
}

message FieldPlotRequest {
  int32 ignore_channel = 1;
  int32 map_id = 2;
  int32 plot_number = 3;

  message UpdatePlot {
    int64 account_id = 1;
    optional bool forfeit = 2;
  }

  message UpdateBlock {
    int64 block_uid = 1;
    int32 x = 2;
    int32 y = 3;
    int32 z = 4;

    message Add {}
    message Remove {}
    message Rotate {
      bool clockwise = 1;
    }
    message Replace {}

    oneof request {
      Add add = 5;
      Remove remove = 6;
      Rotate rotate = 7;
      Replace replace = 8;
    }
  }

  oneof request {
    UpdatePlot update_plot = 4;
    UpdateBlock update_block = 5;
  }
}

message FieldPlotResponse {}
